# fiskCubeSat

./: README.md  constantAndConversion.py  controlKeithley.py  controlKeithleyJM.py  dataGetter.py  gaussFitter.py  intoToPython.py  isotopeDecay.py  keithleyTest.py  kromekControl.py  mariscotti.py  peakFinder.py  peakFinder_revised.py  quickPlots.py  radiationCalc.py  smoothing.py  thermalCalc.py
chrisP/: thermometerTest.py
cppDriverCode/: CMakeLists.txt  CriticalSection.cpp  CriticalSection.h  D3DataProcessor.cpp  D3DataProcessor.h  D3Structs.h  Detector.cpp  Detector.h  DeviceBase.cpp  DeviceBase.h  DeviceEnumeratorLinux.cpp  DeviceEnumeratorLinux.h  DeviceEnumeratorWindows.cpp  DeviceEnumeratorWindows.h  DeviceMgr.cpp  DeviceMgr.h  DriverMgr.cpp  DriverMgr.h  ErrorCodes.h  Event.cpp  Event.h  GR05.cpp  GR05.h  GR1.cpp  GR1.h  HIDDataInterfaceWindows.cpp  HIDDataInterfaceWindows.h  IDataInterface.h  IDataProcessor.h  IDevice.h  IntervalCountProcessor.cpp  IntervalCountProcessor.h  K102.cpp  K102.h  Lock.cpp  Lock.h  Makefile  QTableWidgetDeviceItem.h  RadAngel.cpp  RadAngel.h  (+36 more)
geant4/: dataReadIn.py  outputAnalysis.py  simpleScript.py
johnT/: accelTest.py
peak/: gaussFitter.py  mariscotti.py  spectrumAnalysis.py
pid/: pid.py
pulse/: pulseOperations.py  pulseReadIn.py  pulseScript.py  pulseShapeDiscrim.py
richardN/: oscilliscopeTest.py
satControl/: controlKeithley.py
statTools/: PCA.py  dendrogram.py
testData/: Am-241.tka.csv  Ba-133 10uCi at 140mm, PMT3 850V, 10us 10-5-00, LLD0,0 16384 t21deg.tka.csv  Standard_Am_241.csv  Standard_Cs_137.csv  (+5 more)
(+1 files in other folders)
